# libsonata-mpi

./: .gitignore  .gitmodules  CMakeLists.txt  README.rst  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: run-tests.yml
ci/: cpp_test.sh  python_test.sh
extlib/: CMakeLists.txt
include/bbp/sonata/: hdf5_collective_reader.h
python/: CMakeLists.txt  bindings.cpp
python/libsonata_mpi/: __init__.py
src/: hdf5_collective_reader.cpp
tests/: CMakeLists.txt  test_collective_hdf5.cpp  test_collective_reader.cpp  test_collective_reader.py  unit_tests.cpp
tests/data/: create_data.py  test_data.h5
